@@ -3,6 +3,9 @@ package ca.ubc.cpsc304.database;
 import ca.ubc.cpsc304.model.*;
 
 import javax.swing.table.DefaultTableModel;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileReader;
 import java.sql.*;
 import java.util.ArrayList;
 
@@ -36,10 +39,58 @@ public class DatabaseConnectionHandler {
             connection.setAutoCommit(false);
 
             System.out.println("\nConnected to Oracle!");
+            loadData();
+            System.out.println("Loaded data");
             return true;
         } catch (SQLException e) {
             System.out.println(LOG_TAG + " " + e.getMessage());
             return false;
+        }
+    }
+
+    private void loadData() throws SQLException {
+        String s            = new String();
+        StringBuffer sb = new StringBuffer();
+
+        try
+        {
+            FileReader fr = new FileReader(new File("resources/vehicletables.sql"));
+            // be sure to not have line starting with "--" or "/*" or any other non alphabetical character
+
+            BufferedReader br = new BufferedReader(fr);
+
+            while((s = br.readLine()) != null)
+            {
+                sb.append(s);
+            }
+            br.close();
+
+            // here is our splitter ! We use ";" as a delimiter for each request
+            // then we are sure to have well formed statements
+            String[] inst = sb.toString().split(";");
+
+            Statement st = connection.createStatement();
+
+            for(int i = 0; i<inst.length; i++)
+            {
+                // we ensure that there is no spaces before or after the request string
+                // in order to not execute empty statements
+                if(!inst[i].trim().equals(""))
+                {
+                    st.executeUpdate(inst[i]);
+                    System.out.println(">>"+inst[i]);
+                }
+            }
+
+        }
+        catch(Exception e)
+        {
+            System.out.println("*** Error : "+e.toString());
+            System.out.println("*** ");
+            System.out.println("*** Error : ");
+            e.printStackTrace();
+            System.out.println("################################################");
+            System.out.println(sb.toString());
         }
     }
 
@@ -94,18 +145,20 @@ public class DatabaseConnectionHandler {
         try {
             PreparedStatement ps = connection.prepareStatement("INSERT INTO reservation VALUES (?,?,?,?,?,?,?)");
 
-            ps.setString(1, reservationModel.getConfNo());
+            ps.setInt(1, reservationModel.getConfNo());
             ps.setString(2, reservationModel.getVtname());
 
             if (checkCustomerExists(ps, reservationModel)) {
             	ps.setString(3, reservationModel.getDLicense());
             } else {
-                // TODO: Call TransactionsWindowDelefate.insertCustomer(...) from here somehow.
+                // TODO: Call TransactionsWindowDelegate.insertCustomer(...) from here somehow.
             	// TODO: Display separate GUI to allow a new customer to enter details.
             }
             ps.setString(4, reservationModel.getFromDateTime());
             ps.setString(5, reservationModel.getToDateTime());
 
+            // TODO: Should executeQuery be used here instead of executeUpdate since former returns a ResultSet,
+            //  which can be used to to display details in a receipt.
             ps.executeUpdate();
             connection.commit();
             ps.close();
@@ -125,8 +178,8 @@ public class DatabaseConnectionHandler {
                 System.out.println(WARNING_TAG + " Reservation " + confNo + " does not exist!");
             }
 
+            ps.executeUpdate();
             connection.commit();
-
             ps.close();
         } catch (SQLException e) {
             System.out.println(LOG_TAG + " " + e.getMessage());
@@ -134,11 +187,15 @@ public class DatabaseConnectionHandler {
         }
     }
 
-    public void updateReservation(int confNo, String vtname) {
+    public void updateReservation(int confNo, ReservationModel reservationModel) {
         try {
-            PreparedStatement ps = connection.prepareStatement("UPDATE reservation SET vtname = ? WHERE confNo = ?");
-            ps.setString(1, vtname);
-            ps.setInt(2, confNo);
+            PreparedStatement ps = connection.prepareStatement("UPDATE reservation SET confNo = ?, vtName = ?, " +
+                    "dLicense = ?, fromDateTime = ?. toDateTime = ? WHERE confNo = ?");
+            ps.setInt(1, confNo);
+            ps.setString(2, reservationModel.getVtname());
+            ps.setString(3, reservationModel.getDLicense());
+            ps.setString(4, reservationModel.getFromDateTime());
+            ps.setString(5, reservationModel.getToDateTime());
 
             int rowCount = ps.executeUpdate();
             if (rowCount == 0) {
@@ -146,7 +203,6 @@ public class DatabaseConnectionHandler {
             }
 
             connection.commit();
-
             ps.close();
         } catch (SQLException e) {
             System.out.println(LOG_TAG + " " + e.getMessage());
@@ -173,7 +229,7 @@ public class DatabaseConnectionHandler {
 //    		}
 
             while (rs.next()) {
-                ReservationModel model = new ReservationModel(rs.getString("confNo"),
+                ReservationModel model = new ReservationModel(rs.getInt("confNo"),
                         rs.getString("vtname"),
                         rs.getString("dLicense"),
                         rs.getString("fromDateTime"),
@@ -193,8 +249,11 @@ public class DatabaseConnectionHandler {
     public DefaultTableModel getVehicleInfo(String vtname, String location, String fromDateTime, String toDateTime) {
         DefaultTableModel vmodel = new DefaultTableModel(new String[]{"Vehicle Type", "Location", "Model", "Make", "Year",
                 "Colour", "Features", "Current Status"}, 0);
+        String vt = vtname;
+        String loc = location;
         String from = "";
         String to = "";
+
         if (!fromDateTime.isBlank()) {
             from = "TO_TIMESTAMP('" + fromDateTime + ":00:00')";
         }
@@ -206,9 +265,8 @@ public class DatabaseConnectionHandler {
             Statement stmt = connection.createStatement();
             ResultSet rs;
             // TODO test this query
-            if (vtname.isBlank() ^ location.isBlank() ^ fromDateTime.isBlank() ^ toDateTime.isBlank()) {
-                rs = stmt.executeQuery("SELECT v.vtname, location, model, make, year, colour, features, status " +
-                        "FROM vehicles v, vtype t WHERE v.vtname=t.vtname ORDER  BY v.vtname, location");
+            if (vt.trim().isEmpty() && loc.trim().isEmpty() && from.trim().isEmpty() && to.trim().isEmpty()) {
+                rs = stmt.executeQuery("SELECT v.vtname, location, model, make, v.year, colour, features, status FROM vehicles v, vtype t WHERE v.vtname=t.vtname ORDER BY v.vtname, location");
             } else {
                 boolean prev = false;
                 String sqlquery = "SELECT v.vtname, location, model, make, year, colour, features, status " +
@@ -224,7 +282,7 @@ public class DatabaseConnectionHandler {
                     sqlquery = sqlquery + "location = " + "'" + location + "'";
                     prev = true;
                 }
-                if (!from.isBlank() ^ !to.isBlank()) {
+                if (!from.isBlank() && !to.isBlank()) {
                     if (prev) {
                         sqlquery = sqlquery + " AND ";
                     }
@@ -260,6 +318,7 @@ public class DatabaseConnectionHandler {
                 String c = rs.getString("colour");
                 String f = rs.getString("features");
                 vmodel.addRow(new Object[]{v, l, mo, ma, y, c, f, s});
+                System.out.println(vmodel.getRowCount());
             }
 
             rs.close();
